Bug 508420 - New transaction is not working anymore
Summary: New transaction is not working anymore
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-18 12:14 UTC by Adilson Urso
Modified: 2025-08-19 12:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adilson Urso 2025-08-18 12:14:35 UTC
SUMMARY

Ctrl + Ins or New Transaction button are not working



STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 11
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Version 5.2.1-768433f
Comment 1 Thomas Baumgart 2025-08-18 13:14:10 UTC
Git commit 928281a06c7b2a87e52d17be234ede3778071bf8 by Thomas Baumgart.
Committed on 18/08/2025 at 13:13.
Pushed by tbaumgart into branch 'master'.

Start transaction editor if action is triggered

This amends commit 6d526f52
FIXED-IN: 5.2.2

M  +12   -2    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/928281a06c7b2a87e52d17be234ede3778071bf8
Comment 2 Thomas Baumgart 2025-08-19 12:09:10 UTC
Git commit b8f186722da82eca219d47c812c2f920b6247cbf by Thomas Baumgart.
Committed on 19/08/2025 at 06:10.
Pushed by tbaumgart into branch '5.2'.

Start transaction editor if action is triggered

This amends commit 6d526f52
FIXED-IN: 5.2.2
(cherry picked from commit 928281a06c7b2a87e52d17be234ede3778071bf8)

M  +12   -2    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/b8f186722da82eca219d47c812c2f920b6247cbf