Start transaction editor if action is triggered

This amends commit 6d526f52

BUG: 508420
FIXED-IN: 5.2.2
(cherry picked from commit 928281a06c7b2a87e52d17be234ede3778071bf8)